# docuseguro

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  revision-seguridad-auth.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/memory/: constitution.md
app/: main.py
app/api/: deps.py
app/core/: auth.py  config.py  constants.py  logging.py  login_guard.py  rate_limit.py  security.py  trial.py
app/models/: database.py  doc_pii_token.py  document.py  pii_token.py  query_cache.py  query_log.py  user.py
app/services/: auth_service.py  compression.py  crm_service.py  metrics_service.py  rag_pipeline.py  telegram_service.py  vector_store.py
data/sample_docs/: sample_faq.txt  sample_policy.txt
evals/: README.md  golden_questions.json  pii_dataset.py  run_eval.py  run_pii_eval.py
frontend/: .env.local.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts
scripts/: demo.py  seed_demo.py  seed_pii_map.py  start.sh
specs/001-user-accounts/: plan.md  (+6 more)
tests/: conftest.py  test_account_isolation.py  test_anonymous_mode.py  test_answer_fidelity.py  test_auth_router.py  test_cache.py  test_chunker.py  test_compression.py  test_doc_pii_restore.py  test_extractor.py  test_ingest_router.py  test_pii_eval.py  test_rag_pipeline.py  test_retrieval_eval.py  test_scrubber.py  test_stream_restorer.py  test_trial.py  test_vector_store.py  test_webhook_router.py
(+61 files in other folders)
