[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "privrag"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "ANTHROPIC_API_KEY=test_key",
    "OPENAI_API_KEY=test_key",
    "DATABASE_URL=postgresql+asyncpg://privrag:privrag@localhost:5432/privrag_test",
    "LLM_PROVIDER=openai",
    "TELEGRAM_BOT_TOKEN=",
    "TELEGRAM_CHAT_ID=",
    "SPACY_ENABLED=false",
]
